Countries Task Done
Refactor the method readContent  to fit for other separator not just for ",".