@@ -1,5 +1,8 @@
 package de.bcxp.challenge;
 
+import com.opencsv.CSVParser;
+import com.opencsv.CSVParserBuilder;
+import com.opencsv.CSVReaderBuilder;
 import com.opencsv.exceptions.CsvException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -9,19 +12,27 @@ import com.opencsv.CSVReader;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+
+import org.apache.commons.lang3.StringUtils;
 
 public class MyCSVReader implements MyReader {
     private static final Logger logger = LoggerFactory.getLogger(MyCSVReader.class);
     private List<String[]> fileContent;
     private List<String> labels;
 
-    public MyCSVReader(String fileName) throws IOException, CsvException {
-        fileContent = readContent(fileName);
+    public MyCSVReader(String fileName, char separator) throws IOException, CsvException {
+        fileContent = readContent(fileName, separator);
         if (fileContent.size() < 2) {
             throw new RuntimeException("The given file is empty");
         }
-        labels = List.of(fileContent.get(0));
+        // using Arrays.asList instead of List.of just to use the method set
+        labels = Arrays.asList(fileContent.get(0));
+        // by reading the file countries, there was some extra bytes at the beginning,
+        // these can be removed using the following line
+        String str = StringUtils.removeStart(labels.get(0), "\uFEFF");
+        labels.set(0, str);
         fileContent.remove(0);
     }
 
@@ -65,9 +76,14 @@ public class MyCSVReader implements MyReader {
         return row.get(index);
     }
 
-    private List<String[]> readContent(String fileName) throws IOException, CsvException {
+    private List<String[]> readContent(String fileName, char separator) throws IOException, CsvException {
         FileReader fileReader = new FileReader(fileName);
-        CSVReader csvReader = new CSVReader(fileReader);
+        CSVParser parser = new CSVParserBuilder()
+                .withSeparator(separator)
+                .build();
+        CSVReader csvReader = new CSVReaderBuilder(fileReader)
+                .withCSVParser(parser)
+                .build();
         List<String[]> fileContent = csvReader.readAll();
         fileReader.close();
         csvReader.close();
